# cli

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DISCOVERY_SERVICE_PLAN.md  LICENSE  README.md  SPIKE_NOTES.md  TESTING.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: API_COVERAGE_REPORT.txt  ARCHITECTURE_REVIEW.md  ONE_PAGER.md  api_registry.json  coverage_report.json
docs/design/: oauth-browser-login.md
plugins/dremio/.claude-plugin/: plugin.json
plugins/dremio/skills/audit-dataset-access/: SKILL.md
plugins/dremio/skills/document-dataset/: SKILL.md
plugins/dremio/skills/dremio/: SKILL.md
plugins/dremio/skills/dremio-dbt/: SKILL.md
plugins/dremio/skills/dremio-setup/: SKILL.md
plugins/dremio/skills/investigate-data-quality/: SKILL.md
plugins/dremio/skills/investigate-slow-query/: SKILL.md
plugins/dremio/skills/onboard-new-source/: SKILL.md
scripts/: parse_jssdk.py  validate_api_coverage.py
src/drs/: __init__.py  auth.py  chat_render.py  cli.py  client.py  introspect.py  mcp_server.py  oauth.py  output.py  sse.py  token_store.py  utils.py
src/drs/commands/: access.py  catalog.py  chat.py  context.py  engine.py  folder.py  grant.py  job.py  jobs.py  login.py  project.py  query.py  reflect.py  reflection.py  role.py  schema.py  setup.py  skill.py  space.py  tag.py  user.py  wiki.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_client.py  test_client_retry.py  test_oauth.py  test_output.py  test_sse.py  test_token_store.py  test_utils.py
tests/test_commands/: test_access.py  test_catalog.py  test_chat.py  test_context.py  test_engine.py  test_folder.py  test_grant.py  test_login.py  test_project.py  test_query.py  test_reflection.py  test_role.py  test_setup.py  test_skill.py  test_space.py  test_tag.py  test_user.py  test_wiki.py
