[project]
name = "dremio-cli"
version = "0.1.0"
description = "Developer CLI for Dremio Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Dremio", email = "oss@dremio.com" },
]
keywords = ["dremio", "cli", "data-lakehouse", "sql", "cloud", "iceberg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.27",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/dremio/cli"
Repository = "https://github.com/dremio/cli"
Issues = "https://github.com/dremio/cli/issues"
Documentation = "https://docs.dremio.com/dremio-cloud/api/"

[project.scripts]
dremio = "drs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
