[project]
name = "dremio-cli"
dynamic = ["version"]
description = "Official developer CLI for Dremio Cloud — install with: pipx install dremio-cli"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Dremio Corporation" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]
keywords = ["dremio", "dremio-cloud", "cli", "data-lake", "sql", "official"]
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "pyyaml>=6",
    "pydantic>=2",
    "rich>=13",
    "prompt-toolkit>=3.0",
]

[project.scripts]
dremio = "drs.cli:app"

[project.urls]
Homepage = "https://github.com/dremio/cli"
Repository = "https://github.com/dremio/cli"
Issues = "https://github.com/dremio/cli/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/drs/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/drs"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # typer uses function calls in argument defaults by design
    "B904",   # raise typer.Exit(1) in except blocks is intentional CLI pattern
    "B905",   # zip() strict= is not always appropriate
    "TC001",  # TYPE_CHECKING refactor deferred
    "TC003",  # TYPE_CHECKING refactor deferred
    "RET504", # unnecessary assignment before return — often aids readability
]

[tool.ruff.lint.isort]
known-first-party = ["drs"]

[tool.ruff.format]
quote-style = "double"
